# kiwmi

./: .cirrus.yml  .clang-format  .editorconfig  .gitignore  CONTRIBUTING.adoc  CONTRIBUTING.md  CONTRIBUTING.txt  Cargo.toml  Makefile  README.adoc  README.md  README.txt  config.mk  default.nix  kiwmi.desktop  lua_docs.md  meson.build  meson_options.txt
include/: color.h  commands.h  frontend.h  luak.h  server.h
include/desktop/: desktop.h  desktop_surface.h  layer_shell.h  output.h  popup.h  stratum.h  view.h  xdg_shell.h
include/input/: cursor.h  input.h  keyboard.h  pointer.h  seat.h
include/kiwmi/: commands.h  frontend.h  input.h  output.h  server.h
include/kiwmi/desktop/: desktop.h  output.h
include/kiwmi/input/: cursor.h  input.h  keyboard.h
include/luak/: ipc.h  kiwmi_cursor.h  kiwmi_keyboard.h  kiwmi_lua_callback.h  kiwmi_output.h  kiwmi_renderer.h  kiwmi_server.h  kiwmi_view.h  lua_compat.h  luak.h
kiwmi/: color.c  commands.c  frontend.c  input.c  luak.c  main.c  meson.build  output.c  server.c
kiwmi/desktop/: .output.c.kak.pRsrnt  desktop.c  desktop_surface.c  layer_shell.c  output.c  popup.c  stratum.c  view.c  xdg_shell.c
kiwmi/input/: cursor.c  input.c  keyboard.c  pointer.c  seat.c
kiwmi/luak/: ipc.c  kiwmi_cursor.c  kiwmi_keyboard.c  kiwmi_lua_callback.c  kiwmi_output.c  kiwmi_renderer.c  kiwmi_server.c  kiwmi_view.c  lua_compat.c  luak.c
kiwmic/: main.c  meson.build
lit/: kiwmi.lit  seed.lit  syrup.lit  wmaffle.lit
misc/: kiwmi.1  kiwmi.desktop
protocols/: kiwmi-ipc.xml  meson.build
src/: common.c  common.h  logger.rs  main.rs
src/input/: input_manager.rs  keyboard.rs  manager.rs  mod.rs  pointer.rs
src/kiwmi/: events.c  events.h  ipc.c  ipc.h  main.c  main.h  xcb.c  xcb.h
src/output/: manager.rs  mod.rs  output.rs
src/seed/: main.c
src/shells/: mod.rs  xdg_v6.rs
